# simpleBlender

./: CMakeLists.txt  README.md
headers/: glwidget.h  logger.h  mainwindow.h  renderimagewidget.h  singleton.h  toolfunc.h  uicamera.h  uilight.h  uimaterial.h  uitransform.h
headers/cameras/: Camera.h
headers/customUI/: myLineEdit.h  mystandarditemmodel.h
headers/lights/: converttoshaderlight.h  directionallight.h  light.h  pointlight.h  spotlight.h
headers/objects/: cube.h  object.h  texture.h  texturemanager.h  torus.h  uvsphere.h
resources/: frag.frag  night.qss  resources.qrc  skybox.frag  skybox.vert  vertex.vert
sources/: glwidget.cpp  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  renderImageWidget.ui  renderimagewidget.cpp  toolfunc.cpp  uicamera.cpp  uicamera.ui  uilight.cpp  uilight.ui  uimaterial.cpp  uimaterial.ui  uitransform.cpp  uitransform.ui
sources/cameras/: camera.cpp
sources/customUI/: myLineEdit.cpp  mystandarditemmodel.cpp
sources/lights/: converttoshaderlight.cpp  directionallight.cpp  light.cpp  pointlight.cpp  spotlight.cpp
sources/objects/: cube.cpp  object.cpp  texture.cpp  texturemanager.cpp  torus.cpp  uvsphere.cpp
